HelloUltraviolet/Fixtures/RejectedSource/Parallelism/ParallelClosureCaptureOuterMove/Expected.uv
//! Expected diagnostic metadata for the ParallelClosureCaptureOuterMove rejected-source specimen.

expectedDiagnostic("E-CON-0122", "rule.20.Parallel-Closure-Capture-OuterMove-Err")
